--- a/neko/_layouts/index.html
+++ b/neko/_layouts/index.html
@@ -1,12 +1,9 @@
-<!doctype html>
-<html>
-    <meta charset="utf-8" />
-    <title>Home</title>
-    <body>
-        {% for post in posts %}
-            <p>
-                <a href="{{ post.metadata['title'] }}.html">{{ post.metadata['title'] }}</a>
-            </p>
-        {% endfor %}
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+    {% for post in posts %}
+        <p>
+            <a href="{{ post.metadata['title'] }}.html">{{ post.metadata['title'] }}</a>
+        </p>
+    {% endfor %}
+{% endblock %}
