--- a/neko/_layouts/post.html
+++ b/neko/_layouts/post.html
@@ -1,9 +1,6 @@
-<!doctype html>
-<html>
-    <meta charset="utf-8" />
-    <title>{{ title }}</title>
-    <body>
-        <h1>{{ title }}</h1>
-        <div>{{ content }}</div>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}{{ title }}{% endblock %}
+{% block content %}
+    <h1>{{ title }}</h1>
+    <div>{{ content }}</div>
+{% endblock %}
