--- a/neko/_layouts/base.html
+++ b/neko/_layouts/base.html
@@ -1,11 +1,22 @@
 <!doctype html>
 <html>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css" />
+    <link rel="stylesheet" href="/_static/css/blog.css" />
     <body>
-        <div>
-            {% block content %}
-            {% endblock %}
+        <div id="layout" class="pure-g">
+            <div class="sidebar pure-u-1 pure-u-md-1-4">
+                <div class="header">
+                    <h1 class="brand-title">Alles klar!</h1>
+                </div>
+            </div>
+            <div class="content pure-u-1 pure-u-md-3-4">
+                {% block content %}
+                {% endblock %}
+            </div>
         </div>
     </body>
 </html>
